# codewars

./: CMakeLists.txt  README.md
bash/6_kyu/: AreTheyTheSame.sh  BuildPileCubes.sh  HelpTheBookseller.sh  Meeting.sh  MovesInSqStrings.sh  SumOfParts.sh
bash/7_kyu/: ComplementaryDNA.sh  CountTheDigit.sh  DisemvowelTrolls.sh  DryingPotatos.sh  GrowthOfPopulation.sh  MaximumLengthDifference.sh  Mumbling.sh  PrinterErrors.sh
cpp/: CMakeLists.txt
cpp/include/4_kyu/: DoubleLinear.hpp  TCPStateMachine.hpp  TwiceLinear.hpp  connect_four.h  human_readable_duration_format.h  sum_by_factors.h
cpp/include/5_kyu/: DoubleLinear.cpp  coding_with_squared_strings.h  double_cola.h  factorial_decomposition.h
cpp/src/: CMakeLists.txt
cpp/src/4_kyu/: CMakeLists.txt  TCPStateMachine.cpp  TwiceLinear.cpp  human_readable_duration_format.cpp
cpp/src/5_kyu/: CMakeLists.txt
cpp/ut/: CMakeLists.txt
cpp/ut/4_kyu/: CMakeLists.txt  testConnectFour.cpp  testDoubleLinear.cpp  testHumanReadableDuration.cpp  testSumByFactors.cpp  testTCPStateMachine.cpp  testTwiceLinear.cpp
cpp/ut/5_kyu/: CMakeLists.txt
include/4_kyu/: human_readable_duration_format.h
include/5_kyu/: double_cola.h  factorial_decomposition.h
java/5_kyu/: DirectionsReduction.java
java/6_kyu/: AreTheyTheSame.java  BuildPileCubes.java  HelpTheBookseller.java  Meeting.java  MovesInSqStrings.java  SumOfParts.java
java/7_kyu/: AlphabeticalAddition.java  ComplementaryDNA.java  CountTheDigit.java  DisemvowelTrolls.java  DryingPotatos.java  GrowthOfPopulation.java  MaximumLengthDifference.java  Mumbling.java  PrinterErrors.java
python/5_kyu/: DirectionReduction.py
python/6_kyu/: AreTheyTheSame.py  BuildPileCubes.py  HelpTheBookseller.py  Meeting.py  MovesInSqStrings.py  SumOfParts.py
python/7_kyu/: AlphabeticalAddition.py  ComplementaryDNA.py  CountTheDigit.py  DisemvowelTrolls.py  DryingPotatos.py  GrowthOfPopulation.py  MaximumLengthDifference.py  Mumbling.py  PrinterErrors.py
src/: main.cpp  test_4_kyu_main.cpp  test_5_kyu_main.cpp
src/4_kyu/: connect_four.cpp  sum_by_factors.cpp
src/5_kyu/: coding_with_squared_strings.cpp  double_cola.cpp  factorial_decomposition.cpp
